--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,6 +6,8 @@ plugins {
 }
 
 android {
+    compileSdkVersion 34
+    ndkVersion "27.0.12077973"
     namespace = "com.example.note_app"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
@@ -22,12 +24,18 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.example.note_app"
+
+    minSdkVersion 23
+    targetSdkVersion 33
+    versionCode 1
+    versionName "1.0" 
+    multiDexEnabled true
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
+        // minSdk = flutter.minSdkVersion
+        // targetSdk = flutter.targetSdkVersion
+        // versionCode = flutter.versionCode
+        // versionName = flutter.versionName
     }
 
     buildTypes {
