--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   path_provider: ^2.1.5
   flutter_bloc: ^9.0.0
   modal_progress_hud_nsn: ^0.5.1
+  intl: ^0.20.2
   
 
 dev_dependencies:
